[package]
name = "aoc-rs"
version = "0.1.0"
authors = ["Hubert Jaremko <hjaremko@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
reqwest = "0.11"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
